--- a/src/com/jshooting/forms/EditShootingTrainingsDialog.form
+++ b/src/com/jshooting/forms/EditShootingTrainingsDialog.form
@@ -57,6 +57,7 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection code="shootingTrainingsTableModel" type="code"/>
             </Property>
+            <Property name="rowHeight" type="int" value="24"/>
           </Properties>
         </Component>
       </SubComponents>
