--- a/src/com/jshooting/forms/EditTrainingMethodsDialog.form
+++ b/src/com/jshooting/forms/EditTrainingMethodsDialog.form
@@ -55,6 +55,7 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection code="trainingMethodsTableModel" type="code"/>
             </Property>
+            <Property name="rowHeight" type="int" value="24"/>
           </Properties>
         </Component>
       </SubComponents>
