--- a/src/com/jshooting/forms/EditTeamsDialog.form
+++ b/src/com/jshooting/forms/EditTeamsDialog.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="title" type="java.lang.String" value="&#x41a;&#x43e;&#x43c;&#x430;&#x434;&#x43d;&#x44b;"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
