--- a/src/com/jshooting/forms/EditTrainingMethodsDialog.form
+++ b/src/com/jshooting/forms/EditTrainingMethodsDialog.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="title" type="java.lang.String" value="&#x421;&#x440;&#x435;&#x434;&#x441;&#x442;&#x432;&#x430;"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
